# RepTate

./: .gitattributes  .gitignore  MANIFEST.in  README.md  README.rst  RepTate.py  RepTate.sln  Reptate_license.docx  Reptate_license.rtf  Reptate_license.txt  TODO_RepTate.txt  environment.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  versioneer.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  (+3 more)
RepTate/: .pylintrc  CL.py  CreateDistribution.cmd  CreateDistribution.sh  CreateDistributionCL_DEBUG.cmd  CreateDistributionGUI_DEBUG.cmd  MatDB.py  README_PYINSTALLER.txt  REQUIRES.txt  RepTate.args.json  RepTate.py  RepTate.pyproj  RepTate.spec  RepTateCL.py  RepTate_macOS.spec  UV.py  Version.py  __init__.py  __main__.py  _version.py  requirements.txt  setup.py  test.inp  test_MWD.txt
docs/: make.bat  materials_database.npy  requirements.txt  user_database.npy
scripts/: CreateDistribution.cmd  CreateDistribution.sh  CreateLinuxDistributionNuitka.sh  CreateWindowsDistributionNuitka.cmd  CreateWindowsInstaller.cmd  RepTate.spec  RepTate_macOS.spec  build_ui.py  create_pip_package.cmd  create_pip_package.sh  traverse.py
tests/: RepTate_MaterialsDatabase.py  RepTate_SingleApp.py  RepTate_Test_BoB_polyconf.py  RepTate_Test_Gt.py  RepTate_Test_LVE.py  RepTate_Test_MWD.py  RepTate_Test_NLVE.py  RepTate_Test_NLVE_RDP.py  RepTate_Test_React.py  RepTate_Test_TTS.py  test_LVE_LML.txt  test_LVE_Maxwell.txt  test_MWD.txt  test_NLVE_RoliePoly.txt  test_TTS.txt  test_app_starts.py  test_apps_LVE.py  test_apps_theories.py  test_imports.py
(+1238 files in other folders)
