[metadata]
name = RepTate

[options]
packages = find:

[options.packages.find]
include = RepTate*

[options.entry_points]
console_scripts =
    RepTate=RepTate.__main__:main

[options.extras_require]
# (optional) your extras…

[tool:setuptools_scm]
version_file = RepTate/_version.py
tag_regex = ^(?:v)?(?P<version>\d+\.\d+\.\d+(?:[.-].+)?)$
